# aws_sqs_consumer_python

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readthedocs.yml  setup.py
.github/workflows/: publish-pypi.yml  publish-test.yml  tests.yml
aws_sqs_consumer/: __init__.py  aws_sqs_consumer.py  consumer.py  error.py  message.py
docs/: api.md  conf.py  faq.md  index.rst  installation.md  read.md  requirements.txt  usage.md
docs/_static/css/: fw_theme.css
tests/: test_attributes.py  test_consume.py  test_consume_message.py  test_consume_message_batch.py  test_init.py  test_message.py  utils.py
