[tool.poetry]
name = "aws_sqs_consumer"
version = "0.0.12"
description = "AWS SQS Consumer"
authors = ["Flyweight Group <nobody@flyweightgroup.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.0"
botocore = "^1.20.0"
single-source = "^0.2.0"

[tool.poetry.dev-dependencies]
moto = "^2.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
